--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -4,20 +4,74 @@
   padding: 20px;
 }
 
-.home-card {
+.home-card-container {
   width: 100%;
   background-color: #ffffff;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
 }
 
-.home-image-container {
-    display: flex;
-    justify-content: center;
-    padding-top: 30px;
+.home-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 20px 20px 20px;
 }
 
 .home-card img {
-    max-width: 100%;
-  }
-  
+  max-width: 100%;
+}
+
+.home-card h2 {
+  color: #263238;
+  margin-top: 15px;
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.home-card p {
+  color: rgba(158, 158, 158, 1);
+  margin-top: 15px;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.home-btn-container {
+  background-color: rgba(64, 123, 255, 1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  margin-bottom: 60px;
+}
+
+.home-btn-content {
+  display: flex;
+  background-color: rgba(64, 123, 255, 1);
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  height: 50px;
+  border-radius: 10px;
+}
+
+h3 {
+  color: rgba(255, 255, 255, 1);
+  font-size: 16px;
+  font-weight: 700;
+  /* padding-left: 30px; */
+}
+
+.home-btn-arrow {
+  background-color: #2b56b0;
+  display: flex;
+  padding: 15px 15px 15px 20px;
+  height: 50px;
+  width: 50px;
+  border-radius: 0px 10px 10px 0px;
+}
