--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,7 +1,8 @@
 .home-container {
   width: 100%;
+  height: 100%;
   background-color: #f2f2f2;
-  padding: 20px;
+  padding: 20px 20px 51px 20px;
 }
 
 .home-card-container {
