--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -45,6 +45,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  max-width: 450px;
   height: 50px;
   border-radius: 10px;
   margin-bottom: 60px;
