--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+body {
+  padding-top: 56px;
+}
+
 h1,
 h2,
 h3,
@@ -18,4 +22,10 @@ h6 {
 a {
   text-decoration: none;
   color: unset;
+}
+
+.base-card {
+  background-color: #ffffff;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
