--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,23 +1,14 @@
-.nav-container {
-  /* padding: 20px; */
-}
-
 .nav-logo-text h4 {
-  /* margin-left: 20px; */
   font-size: 18px;
   color: #ffffff;
 }
 
 .nav-menu-container {
   display: flex;
-  /* width: 380px; */
-  /* justify-content: space-around; */
 }
 
 .nav-menu-container a:hover {
   color: #ffffff;
-  /* width: 380px; */
-  /* justify-content: space-around; */
 }
 
 .active {
@@ -25,17 +16,42 @@
 }
 
 .nav-menu-container li {
-  margin: 30px 15px 15px 15px;
-  /* margin: 15px; */
+  margin-right: 4em;
+  margin-top: 15px;
+}
+
+.nav-container {
+  margin-left: 15px;
 }
 
 .nav-menu-container a {
   color: rgba(255, 255, 255, 0.5);
   font-size: 18px;
-  /* margin: 15px; */
 }
 
 .nav-menu-container a.active {
   color: #ffffff;
   font-size: 18px;
+}
+
+@media (min-width: 576px) {
+  .nav-logo-text h4 {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .nav-logo-text h4 {
+    font-size: 24px;
+  }
+
+  .nav-menu-container li {
+    margin-top: 0px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .nav-menu-container li {
+    margin-right: 6em;
+  }
 }
