--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -1,5 +1,9 @@
 .product-card {
-    margin: 10px;
+    margin: 10px;   
+}
+
+.product-card:hover {
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.50);
 }
 
 .product-card-top {
@@ -20,7 +24,7 @@
 .product-card-bottom h6 {
     max-width: 140px;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 1em;
     color: #263238;
     margin-bottom: 20px;
 }
