--- a/src/components/ProductPrice/style.css
+++ b/src/components/ProductPrice/style.css
@@ -5,12 +5,12 @@
 .product-price-coin {
     margin: 6px 8px 0px 0px; 
     color: #9E9E9E;
-    font-size: 18px;
+    font-size: 1em;
 }
  
 .product-price-price {
     color: #407BFF;
-    font-size: 32px;
+    font-size: 1.5em;
     font-weight: bold;
     margin: 0;
 }
