--- a/src/pages/ProductDetails/style.css
+++ b/src/pages/ProductDetails/style.css
@@ -15,7 +15,14 @@
 .product-details-btn-voltar h2 {
   margin-left: 15px;
   font: 22px;
+  color: #263238;
+  text-decoration: none;
 }
+
+.product-details-btn-voltar h2:hover {
+  color: #263238;
+}
+
 
 .product-details-product-container {
   margin: 8px;
@@ -43,6 +50,10 @@
   width: 100%;
 }
 
+.product-details-text h2 {
+  margin-bottom: 10px;
+}
+
 .product-details-description {
   padding: 20px;
   border: 1px solid #e1e1e1;
@@ -66,6 +77,7 @@
     display: flex;
     justify-content: space-between;
   }
+  
 
   .product-details-product {
     margin: 0;
