--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -7,31 +7,23 @@
   display: flex;
 }
 
-.nav-menu-container a:hover {
-  color: #ffffff;
+.nav-menu-item {
+  margin-right: 4em;
+  margin-top: 15px;
+  color: rgba(255, 255, 255, 0.5);
 }
 
-.active {
+.nav-menu-item.active {
+  color: white;
   font-weight: bold;
 }
 
-.nav-menu-container li {
-  margin-right: 4em;
-  margin-top: 15px;
+.nav-menu-item:hover {
+  color: #ffffff;
 }
 
 .nav-container {
   margin-left: 15px;
-}
-
-.nav-menu-container a {
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 18px;
-}
-
-.nav-menu-container a.active {
-  color: #ffffff;
-  font-size: 18px;
 }
 
 @media (min-width: 576px) {
@@ -57,6 +49,6 @@
 }
 
 .navbar-dark .navbar-toggler {
-    color: transparent;
-    border-color: hsla(0,0%,100%,.1);
+  color: transparent;
+  border-color: hsla(0, 0%, 100%, 0.1);
 }
