--- a/src/pages/Catalog/style.css
+++ b/src/pages/Catalog/style.css
@@ -1,12 +1,14 @@
 .catalog-container {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .catalog-title h1 {
-    font-size: 1em;
-    margin: 20px 10px 15px 10px;
+  font-size: 1em;
+  margin: 20px 10px 15px 10px;
 }
 
 .catalog-pagination {
-    padding: 40px 20px;
+  display: flex;
+  justify-content: center;
+  padding: 40px 20px;
 }
