--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -2,7 +2,8 @@
   font-size: 16px;
   background-color: #f2f2f2;
   padding: 10px;
-  height: 100%;
+  /* height: 100%; */
+  height: calc(100vh - 56px);
 }
 
 .home-card {
