--- a/src/pages/ProductDetails/style.css
+++ b/src/pages/ProductDetails/style.css
@@ -4,6 +4,7 @@
 
 .product-details-card {
   padding: 20px;
+  height: calc(100vh - 96px);
 }
 
 .product-details-btn-voltar {
@@ -59,12 +60,31 @@
   border: 1px solid #e1e1e1;
   border-radius: 20px;
   margin-top: 30px;
+
 }
 
 .product-details-description h3 {
   font-size: 18px;
   color: #9e9e9e;
   margin-bottom: 20px;
+}
+
+@media (min-width: 1024px) {
+  .product-details-product-container {
+    margin: 18px;
+  }
+
+  .product-details-text {
+    margin-right: 50px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+
+  .product-details-product {
+    margin: 0;
+    padding: 0;
+  }
 }
 
 @media (min-width: 1024px) {
