--- a/src/components/ButtonIcon/style.css
+++ b/src/components/ButtonIcon/style.css
@@ -1,9 +1,11 @@
 .btn-container {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .btn-text {
+  width: 100%;
   display: flex;
   align-items: center;
   color: white;
@@ -11,6 +13,7 @@
   border-radius: 10px 0px 0px 10px;
   text-transform: uppercase;
   font-weight: bold;
+  justify-content: center;
 }
 
 .btn-text:hover {
