Configurando campos requeridos Hook Form

--- a/src/pages/Admin/Auth/Login/style.css
+++ b/src/pages/Admin/Auth/Login/style.css
@@ -53,6 +53,10 @@
   font-size: 1em;
 }
 
+.invalid-feedback {
+  font-size: 15px;
+}
+
 @media(min-width: 1440px) {
   .login-card {
     padding: 50px;
