--- a/src/components/ProductCard/style.css
+++ b/src/components/ProductCard/style.css
@@ -1,31 +1,31 @@
 .product-card {
-    margin: 10px;
-    min-height: 300px;   
+  margin: 10px;
+  min-height: 300px;
 }
 
 .product-card:hover {
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.50);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
 }
 
 .product-card-top {
-    text-align: center;
-    border-bottom: 1px solid #E1E1E1;
+  text-align: center;
+  border-bottom: 1px solid #e1e1e1;
 }
 
 .product-card-top img {
-    width: 140px;
-    height: 140px;
-    margin: 15px;
+  width: 140px;
+  height: 140px;
+  margin: 15px;
 }
 
 .product-card-bottom {
-    padding: 15px 40px 10px 20px;
+  padding: 15px 40px 10px 20px;
 }
 
 .product-card-bottom h6 {
-    max-width: 140px;
-    font-weight: bold;
-    font-size: 1em;
-    color: #263238;
-    margin-bottom: 20px;
+  max-width: 140px;
+  font-weight: bold;
+  font-size: 1em;
+  color: #263238;
+  margin-bottom: 20px;
 }
