--- a/src/components/ProductPrice/style.css
+++ b/src/components/ProductPrice/style.css
@@ -1,16 +1,16 @@
 .product-price-container {
-    display: flex;
+  display: flex;
 }
 
 .product-price-coin {
-    margin: 6px 8px 0px 0px; 
-    color: #9E9E9E;
-    font-size: 1em;
+  margin: 6px 8px 0px 0px;
+  color: #9e9e9e;
+  font-size: 1em;
 }
- 
+
 .product-price-price {
-    color: #407BFF;
-    font-size: 1.5em;
-    font-weight: bold;
-    margin: 0;
+  color: #407bff;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 0;
 }
