--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -40,6 +40,10 @@
   margin: 0 0 0 15px;
 }
 
+.nav-login-container {
+  display: flex;
+}
+
 .nav-login-user {
   display: none;
   font-size: 16px;
