--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -7,7 +7,12 @@
   color: #ffffff;
 }
 
-.nav-menu-container {
+.nav-menu-container a.active {
+  color: white;
+  font-weight: bold;
+}
+
+.nav-menu-container{
   display: flex;
 }
 
@@ -15,11 +20,6 @@
   margin-right: 4em;
   margin-top: 15px;
   color: rgba(255, 255, 255, 0.5);
-}
-
-.nav-menu-item.active {
-  color: white;
-  font-weight: bold;
 }
 
 .nav-menu-item:hover {
