--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,16 @@ a, a:hover {
   color: #9E9E9E;
 }
 
+.product-crud-select__control {
+  border-radius: 10px !import;
+  font-size: 1em;
+  letter-spacing: -0.015em;
+  color: #263238;
+  height: 50px;
+}
+
+.product-crud-select__placeholder {
+  color: #9E9E9E !import,
+}
+
+
