--- a/src/components/Pagination/style.css
+++ b/src/components/Pagination/style.css
@@ -1,5 +1,7 @@
 .pagination-container {
+  margin-top: 20px;
   max-width: 647px;
+  min-width: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,6 +22,19 @@
   color: #ffffff;
 }
 
+.pagination-item:hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  background-color: #80caff;
+}
+
 .pagination-item.active {
   background: #407bff;
 }
@@ -29,13 +44,14 @@
 }
 
 .arrow-active {
-  width: 10px;
-  height: 20px;
-  color: rgba(64, 123, 255, 1);
+  //width: 10px;
+  //height: 20px;
+  background-color: rgba(64, 123, 255, 1);
 }
 
 .arrow-inactive {
-  width: 10px;
-  height: 20px;
-  color: red;
+  //width: 10px;
+  //height: 20px;
+  //color: red;
+  background-color: #c7c7;
 }
